[tool.poetry]
name = "adelaidetimetablescapper"
version = "0.1.0"
description = ""
authors = ["HoangLe <hoang.le@consilium.technology>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.28.2"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
